--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_executable(LearningCG main.cpp
         obb.h
         camera.cpp
         camera.h
+        bvh.cpp
+        bvh.h
+        shader.h
 )
 
 find_package(glad CONFIG REQUIRED)
@@ -29,3 +32,9 @@ target_link_libraries(LearningCG PRIVATE assimp::assimp)
 
 find_package(Eigen3 CONFIG REQUIRED)
 target_link_libraries(LearningCG PRIVATE Eigen3::Eigen)
+
+find_package(OpenMP REQUIRED)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+
+
